--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -32,9 +32,9 @@ jobs:
       with:
         github_access_token: ${{ secrets.GITHUB_TOKEN }} # see the Configuration section for how you can create secrets
         build_configuration: production # The build environment for the app. please look configurations in your angular.json
-        base_href: /frontend-application/   # make sure this corresponds to https://<your_username>.github.io/<base_href>/
+        base_href: /Frontend-Application/   # make sure this corresponds to https://<your_username>.github.io/<base_href>/
         deploy_branch: gh-pages # The branch the action should deploy to.
-        angular_dist_build_folder: dist/mdp-website # The folder where your project is supposed to be after running ng build by the action.
+        angular_dist_build_folder: dist/frontend-application # The folder where your project is supposed to be after running ng build by the action.
 
 permissions:
   contents: write # Allow write permission to GITHUB_TOKEN to commit to deploy branch.
